fixed the accordian to have correct future dates
also fixed the searched city name not showing capitalized when submitted

--- a/src/styles.css
+++ b/src/styles.css
@@ -48,6 +48,7 @@ h1 {
 .city {
   background-color: #ffcfd2;
   text-align: center;
+  text-transform: capitalize;
 }
 #city,
 #date {
